show error message

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <h2>Acertou em <span id="attempts">0 tentativas</span>!</h2>
       <button type="button" id="btn-play-again">Jogar novamente</button>
     </section>
+    <h3 id="error-message">error message</h3>
   </main>
   
 </body>
